[gd_scene load_steps=7 format=1]

[ext_resource path="res://utilities/menu/menu.png" type="Texture" id=1]
[ext_resource path="res://utilities/menu/menu.gd" type="Script" id=2]
[ext_resource path="res://utilities/menu/select.png" type="Texture" id=3]
[ext_resource path="res://fonts/french_neat.fnt" type="BitmapFont" id=4]
[ext_resource path="res://fonts/titleFont2large.fnt" type="BitmapFont" id=5]
[ext_resource path="res://screens/main_menu/SelectedLine.png" type="Texture" id=6]

[node name="menu" type="Patch9Frame"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 52.0
margin/bottom = 44.0
texture = ExtResource( 1 )
patch_margin/left = 8
patch_margin/top = 8
patch_margin/right = 8
patch_margin/bottom = 8
script/script = ExtResource( 2 )

[node name="selector" type="Sprite" parent="."]

transform/pos = Vector2( 8, 10 )
transform/scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 3 )

[node name="Labels" type="Node2D" parent="."]

transform/pos = Vector2( 27.5, 41 )
transform/scale = Vector2( 0.859375, 1.28125 )

[node name="Chapitres" type="Label" parent="Labels"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -27.0
margin/right = 108.0
margin/bottom = 13.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.186768, 0.597754, 0.996094, 1 )
text = "Chapitres"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="lesson_plan" type="Label" parent="Labels"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -21.0
margin/right = 157.0
margin/bottom = 19.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.186768, 0.597754, 0.996094, 1 )
text = "Plan de cours"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="main_menu" type="Label" parent="Labels"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -15.0
margin/right = 182.0
margin/bottom = 25.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.186768, 0.597754, 0.996094, 1 )
text = "Menu principal"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="Save" type="Label" parent="Labels"]

rect/scale = Vector2( 0.2, 0.2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -20.0
margin/top = -9.0
margin/right = 116.0
margin/bottom = 31.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0.186768, 0.597754, 0.996094, 1 )
text = "Sortie"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter_menu" type="PopupDialog" parent="."]

editor/display_folded = true
visibility/visible = false
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 127.0
margin/top = 78.0
margin/right = 529.0
margin/bottom = 378.0
popup/exclusive = false

[node name="chapter1" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 4.0
margin/right = 1329.0
margin/bottom = 111.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 1: Noms"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter2" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 36.0
margin/right = 1335.0
margin/bottom = 140.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 2: Pronoms"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter3" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 68.0
margin/right = 1329.0
margin/bottom = 179.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 3:  Verbes"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter4" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 100.0
margin/right = 1329.0
margin/bottom = 204.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 4:  Adverbes"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter5" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 132.0
margin/right = 1329.0
margin/bottom = 239.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 5: Adjectifs"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter6" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 164.0
margin/right = 1329.0
margin/bottom = 271.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 6: Pr√©positions"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter7" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 196.0
margin/right = 1329.0
margin/bottom = 303.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 7:  Conjonctions"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter8" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 228.0
margin/right = 1329.0
margin/bottom = 332.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Chapitre 8: Articles"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="back" type="Label" parent="chapter_menu"]

rect/scale = Vector2( 0.3, 0.3 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 260.0
margin/right = 1329.0
margin/bottom = 367.0
custom_fonts/font = ExtResource( 5 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Retourner"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="chapter_select" type="Sprite" parent="."]

transform/pos = Vector2( 226, 91 )
transform/scale = Vector2( 0.431416, 0.0840031 )
texture = ExtResource( 6 )


